# triage

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 5a2b0d847c28_initial_schema_hpo_diseases_cases.py
docker/: docker-compose.yml
docker/init/: 01_init_extensions.sql
src/triage/: __init__.py  config.py  logging.py
src/triage/db/: __init__.py  engine.py  models.py
tests/integration/: test_db.py
tests/unit/: test_config.py
