[project]
name = "triage"
version = "0.1.0"
description = "Clinical evidence synthesis platform for rare disease diagnosis"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Core
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.2.0",
    "rich>=13.7.0",
    # Database (we'll use these in Stage 2)
    "psycopg[binary,pool]>=3.2.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    # PHI safety (Stage 3)
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    "spacy>=3.7.0",
    # Data parsing (Stages 4-5)
    "lxml>=5.2.0",
    "obonet>=1.1.0",
    # HTTP & utilities
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ipython>=8.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/triage"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "RUF", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests requiring external services",
    "slow: tests that take more than 1s",
]
